--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,13 @@
 <body>
 	<h1>ELIDEK</h1>
 	<div>
+	<form action="/crud_page" method="post">
+		<p>CRUD</p>
+		<p><input type="submit" value="Insert-Delete-Update data"/></p>
+	</form>
+	</div>
+	
+	<div>
 	<form action="/programs" method="post">
 		<p>Click here to search programs</p>
 		<p><input type="submit" value="Open programs"/></p>
