--- a/templates/crud_page.html
+++ b/templates/crud_page.html
@@ -8,10 +8,14 @@
 		table, th, td {
 		border:1px solid black;
 		}
+		div {
+			border-block: 2px solid red;
+		}
 	</style>
 </head>
 
 <body>
+	<div>
 	<h5>Researcher Insertion</h5>
 	<form action="/researcher_insert" method="POST">
 		<input name="first_name" placeholder="Insert researcher first name">	
@@ -45,8 +49,9 @@
 		<input name="organisation_id" placeholder="Insert organisation id">
 		<input type="submit">
 	</form>
+	</div>
 	
-	
+	<div>
 	<h5>Project Insertion</h5>
 	<form action="/project_insert" method="POST">
 		<input name="start_date" placeholder="Insert project start date">	
@@ -90,7 +95,99 @@
 		<input name="grader_id" placeholder="Insert project grader id">
 		<input type="submit">
 	</form>
-	 
+	</div>
+	
+	<div>
+		<h5>Insert a researcher as employe into a project</h5>
+		<form action="/researcher_project_insert" method="POST">
+			<input name="first_name" placeholder="Insert researcher first name">	
+			<input name="last_name" placeholder="Insert researcher last name">
+			<input name="title" placeholder="Project title">
+			<input name="start_date" placeholder="Start date yyyy-mm-dd">
+			<input type="submit">
+		</form>
+		
+		<h5>Remove a researcher from employee in a project</h5>
+		<form action="/researcher_project_delete" method="POST">
+			<input name="first_name" placeholder="Insert researcher first name">	
+			<input name="last_name" placeholder="Insert researcher last name">
+			<input name="title" placeholder="Project title">
+			<input name="start_date" placeholder="Start date yyyy-mm-dd">
+			<input type="submit">
+		</form>
+		
+		<h5>Remove a researcher from all his/her projects</h5>
+		<form action="/researcher_remove" method="POST">
+			<p>Select a researcher to remove</p>
+			<input name="first_name" placeholder="Select researcher's first name">	
+			<input name="last_name" placeholder="Select researcher's last name">
+			<input type="submit">
+		</form>
+		
+		<h5>Remove all researchers from a project</h5>
+		<form action="/project_remove" method="POST">
+			<p>Select a project to remove from</p>
+			<input name="title" placeholder="Select title">	
+			<input name="start_date" placeholder="Start date yyyy-mm-dd">
+			<input type="submit">
+		</form>
+	</div>
+	
+	<div>
+		<h5>Add a project to a research field</h5>
+		<form action="/project_field_insert" method="POST">
+			<input name="title" placeholder="Project title">
+			<input name="start_date" placeholder="Start date yyyy-mm-dd">
+			<input name="field" placeholder="Research field">
+			<input type="submit">
+		</form>
+		
+		<h5>Delete a project from a research field</h5>
+		<form action="/project_field_delete" method="POST">
+			<input name="title" placeholder="Project title">
+			<input name="start_date" placeholder="Start date yyyy-mm-dd">
+			<input name="field" placeholder="Research field">
+			<input type="submit">
+		</form>
+		
+		<h5>Remove a project from all its fields</h5>
+		<form action="/project_field_remove" method="POST">
+			<p>Select a project to remove</p>
+			<input name="title" placeholder="Project title">
+			<input name="start_date" placeholder="Start date yyyy-mm-dd">
+			<input type="submit">
+		</form>
+	</div>
+	
+	<div>
+		<h5>Add a deliverable to a project</h5>
+		<form action="/deliverable_insert" method="POST">
+			<input name="title" placeholder="Project title">
+			<input name="start_date" placeholder="Start date yyyy-mm-dd">
+			<input name="del_title" placeholder="Deliverable title">
+			<input name="desc" placeholder="Deliverable desc">
+			<input name="del_id" placeholder="Deliverable number">
+			<input name="del_date" placeholder="Delivery date yyyy-mm-dd">
+			<input type="submit">
+		</form>
+		
+		<h5>Delete a deliverable from a project</h5>
+		<form action="/deliverable_delete" method="POST">
+			<input name="title" placeholder="Project title">
+			<input name="start_date" placeholder="Start date yyyy-mm-dd">
+			<input name="del_id" placeholder="Deliverable number">
+			<input type="submit">
+		</form>
+		
+		<h5>Remove all deliverables from a project</h5>
+		<form action="/deliverables_remove" method="POST">
+			<p>Select a project to remove from</p>
+			<input name="title" placeholder="Project title">
+			<input name="start_date" placeholder="Start date yyyy-mm-dd">
+			<input type="submit">
+		</form>
+	</div>
+	
 </body>
 
 </html>
