--- a/templates/crud_page.html
+++ b/templates/crud_page.html
@@ -16,6 +16,49 @@
 
 <body>
 	<div>
+		<h5>Search all data stored</h5>
+		<form style="display: inline;" action="/search_researchers" method="POST">
+			<input type="submit" value="Search researchers">
+		</form>
+		<form style="display: inline;" action="/search_projects" method="POST">
+			<input type="submit" value="Search projects">
+		</form>
+		<form style="display: inline;" action="/search_programs" method="POST">
+			<input type="submit" value="Search programs">
+		</form>
+		<form style="display: inline;" action="/search_organisations" method="POST">
+			<input type="submit" value="Search organisations">
+		</form>
+		<form style="display: inline;" action="/search_corporations" method="POST">
+			<input type="submit" value="Search corporations">
+		</form>
+		<form style="display: inline;" action="/search_universities" method="POST">
+			<input type="submit" value="Search universities">
+		</form>
+		<form style="display: inline;" action="/search_research_centers" method="POST">
+			<input type="submit" value="Search research centers">
+		</form>
+		<form style="display: inline;" action="/search_phones" method="POST">
+			<input type="submit" value="Search organisation phones">
+		</form>
+		<form style="display: inline;" action="/search_executives" method="POST">
+			<input type="submit" value="Search executives">
+		</form>
+		<form style="display: inline;" action="/search_research_fields" method="POST">
+			<input type="submit" value="Search research fields">
+		</form>
+		<form style="display: inline;" action="/search_project_fields" method="POST">
+			<input type="submit" value="Search project fields">
+		</form>
+		<form style="display: inline;" action="/search_deliverables" method="POST">
+			<input type="submit" value="Search deliverables">
+		</form>
+		<form style="display: inline;" action="/search_researcher_projects" method="POST">
+			<input type="submit" value="Search researcher's projects">
+		</form>
+	</div>
+	
+	<div>
 	<h5>Researcher Insertion</h5>
 	<form action="/researcher_insert" method="POST">
 		<input name="first_name" placeholder="Insert researcher first name">	
